--- a/style.css
+++ b/style.css
@@ -99,9 +99,28 @@ img{
 @media only screen and (min-width: 992px){
 
     .container{
-        padding: 3rem;
+        padding: 4rem 10rem;
         display:grid;
         grid-template-columns:repeat(3,1fr);
         grid-template-rows:repeat(1,1fr);
         }
+        .description{
+            font-size:.98rem;
+            line-height:30px;
+            
+        }
+        .content,
+        .content-1,
+        .content-2{
+            padding:2.5rem 4rem;
+            font-weight:100;
+        }
+        .content{
+            border-radius:8px 0 0 8px;
+        }
+        .content-2{
+            border-radius:0 8px 8px 0;
+        }
+}
+
 }
